# AIHarness

./: .gitignore  AGENTS.md  README.md  TESTING.md  TODO.md  VERSIONS.md  index.html  package-lock.json  package.json  run-app.sh  tsconfig.json  vite.config.ts
.githooks/: pre-commit
Docs/: HighLevel.md  ImplementationRoadmap.md  Planning.md  README.md  SESSION-RESTART.md  VERSIONS.md  index.md
Docs/Architecture/: Overview.md  System-Design.md
Docs/Contributing/: AI-Guidelines.md
Docs/Manual/: Tools.md
Docs/Planning/: Backlog.md  Features.md  Session-Notes.md  Technical-Roadmap.md  Testing-Strategy.md
examples/: sample-project-config.yaml
scripts/: collect-build.sh  deploy-mcp.sh  install-local.sh  run-tests.sh  test_client.py
src/: App.test.tsx  App.tsx  index.css  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  build_commands.rs  context.rs  context_notes.rs  error.rs  http_server.rs  lib.rs  main.rs  mcp.rs  mcp_config.rs  mcp_proxy.rs  mcp_server.rs  next_session.rs  projects.rs  todos.rs
src-tauri/src/tests/: contract_tests.rs  integration_tests.rs  mod.rs
src-tauri/src/tools/: file.rs  mod.rs  test.rs
src/components/: ContextPanel.tsx  EventLog.tsx  RawEventLog.tsx  ServerStatus.tsx  TodoPanel.test.tsx  TodoPanel.tsx  TodoPanelSimple.tsx  ToolCallLog.tsx
src/contexts/: ProjectContext.tsx
src/hooks/: useTodos.ts
src/stores/: serverStore.ts
src/types/: index.ts
