[package]
name = "aiharness"
version = "0.1.0"
description = "AI Control Center - MCP Server"
authors = ["AIHarness Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "aiharness_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "aiharness-mcp-server"
path = "src/mcp_server.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
