[package]
name = "aiharness"
version = "0.1.0"
description = "AI Control Center - HTTP Tool Server"
authors = ["AIHarness Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "aiharness_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "aiharness"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
